Добавлен флаг обладания объявлением  для авторизированных пользователей
